--- a/src/app/project-settings/project-settings.component.html
+++ b/src/app/project-settings/project-settings.component.html
@@ -1,3 +1,6 @@
-<p>
-  project-settings works!
-</p>
+<div class="content-area">
+  <div class="wrapper">
+    <clr-icon shape="lightbulb" class="has-badge" size="72"></clr-icon>
+    <p>This page under construction</p>
+  </div>
+</div>
