--- a/src/app/projects/create-project-modal/create-project-modal.component.html
+++ b/src/app/projects/create-project-modal/create-project-modal.component.html
@@ -9,9 +9,8 @@
           <input type="text" id="name" name="name" [(ngModel)]="project.name" #name="ngModel" size="35" required minlength="2">
         </div>
         <div class="form-group">
-          <label for="description" class="required">{{ 'PROJECTCREATEPAGE.DESCRIPTION' | translate }}</label>
-          <input type="text" id="description" name="description" [(ngModel)]="project.description" #description="ngModel" size="35"
-            required>
+          <label for="description">{{ 'PROJECTCREATEPAGE.DESCRIPTION' | translate }}</label>
+          <input type="text" id="description" name="description" [(ngModel)]="project.description" #description="ngModel" size="35">
         </div>
 
       </section>
