fix(ui): fix breaking changes in clarity

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,6 +1,6 @@
 <div class="content-area">
-  <div class="row">
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+  <div class="clr-row">
+    <div class="clr-col-xs-12 clr-col-sm-6 clr-col-md-4 clr-col-lg-4">
       <div class="card clickable">
         <div class="card-block">
           <h4 class="card-title">Last Test Execution</h4>
@@ -24,7 +24,7 @@
         </div>
       </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+    <div class="clr-col-xs-12 clr-col-sm-6 clr-col-md-4 clr-col-lg-4">
       <div class="card clickable">
         <div class="card-block">
           <h4 class="card-title">Test Cases</h4>
@@ -35,7 +35,7 @@
       </div>
     </div>
 
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+    <div class="clr-col-xs-12 clr-col-sm-6 clr-col-md-4 clr-col-lg-4">
       <div class="card clickable">
         <div class="card-block">
           <h4 class="card-title">CI / CD</h4>
@@ -48,7 +48,7 @@
       </div>
     </div>
 
-    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+    <div class="clr-col-xs-12 clr-col-sm-8 clr-col-md-8 clr-col-lg-8">
       <div class="card">
         <div class="card-block">
           <h4 class="card-title">Test Execution</h4>
@@ -108,7 +108,7 @@
       </div>
     </div>
 
-    <div class="col-xs-12 col-sm-6 col-md-4 col-lg-4">
+    <div class="clr-col-xs-12 clr-col-sm-6 clr-col-md-4 clr-col-lg-4">
       <div class="card">
         <div class="card-block">
           <h4 class="card-title">Top 5 Failed Test Cases</h4>
