--- a/src/app/test-management/test-management.component.html
+++ b/src/app/test-management/test-management.component.html
@@ -8,7 +8,7 @@
 
 
 
-        <div class="testcases-container col-sm-12 col-md-12 col-lg-9">
+        <div class="testcases-container clr-col-sm-12 clr-col-md-12 clr-col-lg-9 clr-col-lg-10">
           <app-test-cases [selectedTS]="selectedTestSuite"></app-test-cases>
         </div>
 
@@ -57,7 +57,7 @@
 
   <ng-template #noExistTestSuites>
     <div class="noexist-wrapper">
-      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+      <div class="clr-col-lg-12 clr-col-md-12 clr-col-sm-12 clr-col-xs-12">
 
         <div class="no-testsuites">
           <img src="assets/add-project.png">
