--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -5,21 +5,8 @@
         <div class="card-block">
           <h4 class="card-title">Last Test Execution</h4>
           <div style="width: 150px;">
-            <svg width="100%" height="100%" viewBox="0 0 42 42" class="donut">
-              <circle class="donut-ring" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#000000" stroke-opacity="0.15"
-                stroke-width="3"></circle>
 
-              <circle class="donut-segment" cx="21" cy="21" r="15.91549430918954" fill="transparent" stroke="#5ea41c" stroke-width="3"
-                stroke-dasharray="85 15" stroke-dashoffset="25"></circle>
-              <g class="chart-text">
-                <text x="50%" y="50%" class="chart-number">
-                  85%
-                </text>
-                <text x="50%" y="50%" class="chart-label">
-                  Completed
-                </text>
-              </g>
-            </svg>
+            <app-donut-chart text="85%" subText="Completed" percents="85"></app-donut-chart>
           </div>
         </div>
       </div>
