feat(testruns): add testsuites

--- a/src/app/test-executions/add-testcases/add-testcases.component.html
+++ b/src/app/test-executions/add-testcases/add-testcases.component.html
@@ -1,7 +1,7 @@
 <div class="content-area">
-  <div class="row">
-    <div style="border: 1px dashed red; height: 500px;" class="col-sm-12 col-md-9 col-lg-9"></div>
-    <div style="border: 1px dashed green; height: 500px;" class="col-sm-12 col-md-3 col-lg-3">
+  <div class="clr-row">
+    <div style="border: 1px dashed red; height: 90vh;" class="clr-col-sm-12 clr-col-md-9 clr-col-lg-9"></div>
+    <div style="border: 1px dashed green; height: 90vh;" class="clr-col-sm-12 clr-col-md-3 clr-col-lg-3">
 
       <clr-tree-node *ngFor="let testsuite of testSuitesViewModel" [(clrSelected)]="testsuite.selected">
 
