--- a/src/app/test-executions/add-testcases/add-testcases.component.html
+++ b/src/app/test-executions/add-testcases/add-testcases.component.html
@@ -3,15 +3,12 @@
     <div style="border: 1px dashed red; height: 90vh;" class="clr-col-sm-12 clr-col-md-9 clr-col-lg-9"></div>
     <div style="border: 1px dashed green; height: 90vh;" class="clr-col-sm-12 clr-col-md-3 clr-col-lg-3">
 
-      <clr-tree-node *ngFor="let testsuite of testSuitesViewModel" [(clrSelected)]="testsuite.selected">
-
-        {{testsuite.name}}
-        <ng-template [(clrIfExpanded)]="testsuite.expanded">
-          <clr-tree-node *ngFor="let subtestsuite of testsuite.children" [(clrSelected)]="subtestsuite.selected">
-            {{subtestsuite.name}}
-          </clr-tree-node>
-        </ng-template>
-      </clr-tree-node>
+      <clr-tree>
+        <clr-tree-node *clrRecursiveFor="let testSuite of testSuitesViewModel; getChildren: getChildren"
+          [(clrSelected)]="testSuite.selected" [(clrExpanded)]="testSuite.expanded">
+          {{ testSuite.name }}
+        </clr-tree-node>
+      </clr-tree>
 
     </div>
   </div>
