--- a/src/app/test-executions/add-testcases/add-testcases.component.html
+++ b/src/app/test-executions/add-testcases/add-testcases.component.html
@@ -1,12 +1,14 @@
 <div class="content-area">
   <div class="clr-row">
-    <div style="border: 1px dashed red; height: 90vh;" class="clr-col-sm-12 clr-col-md-9 clr-col-lg-9"></div>
-    <div style="border: 1px dashed green; height: 90vh;" class="clr-col-sm-12 clr-col-md-3 clr-col-lg-3">
+    <div style="height: 90vh;" class="clr-col-sm-12 clr-col-md-9 clr-col-lg-9">
+        <app-test-cases-execution [selectedTS]="selectedTestSuite" (save)="onSave()"></app-test-cases-execution>
+    </div>
+    <div style="height: 90vh;" class="clr-col-sm-12 clr-col-md-3 clr-col-lg-3">
 
       <clr-tree>
         <clr-tree-node *clrRecursiveFor="let testSuite of testSuitesViewModel; getChildren: getChildren"
           [(clrSelected)]="testSuite.selected" [(clrExpanded)]="testSuite.expanded">
-          {{ testSuite.name }}
+          <button (click)="openTestSuite(testSuite)" class="clr-treenode-link">{{ testSuite.name }}</button>
         </clr-tree-node>
       </clr-tree>
 
