--- a/src/app/test-management/create-test-case-modal/create-test-case-modal.component.html
+++ b/src/app/test-management/create-test-case-modal/create-test-case-modal.component.html
@@ -31,15 +31,14 @@
             <select clrSelect id="type" name="type" [(ngModel)]="testcase.type" #type="ngModel">
               <option *ngFor="let type of typeKeys" [value]="type.value">{{ 'TESTCASETYPE.' + type.value | translate }}</option>
             </select>
-
         </clr-select-container>
 
         <clr-input-container>
           <label for="tags">{{ 'TESTCASECREATEPAGE.TAGS' | translate }}</label>
           <input clrInput #tag type="text" id="tags" name="tags" (keyup.enter)="setTag(tag.value); tag.value = '';" placeholder="{{ 'TESTCASECREATEPAGE.TAGS_PLACEHOLDER' | translate }}"
             size="35">
-
         </clr-input-container>
+
         <button type="button" class="btn btn-sm btn-secondary" (click)="setTag(tag.value); tag.value = '';">
         <clr-icon shape="plus"></clr-icon> Add</button>
 
@@ -53,11 +52,11 @@
 
 
 
-        <clr-input-container>
+          <clr-textarea-container>
             <label for="preconditions">{{ 'TESTCASECREATEPAGE.PRECONDITIONS' | translate }}</label>
-            <textarea id="preconditions" name="preconditions" [(ngModel)]="testcase.preConditions" #preconditions="ngModel" placeholder="{{ 'TESTCASECREATEPAGE.PRECONDITIONS_PLACEHOLDER' | translate }}"
+            <textarea clrTextarea id="preconditions" name="preconditions" [(ngModel)]="testcase.preConditions" #preconditions="ngModel" placeholder="{{ 'TESTCASECREATEPAGE.PRECONDITIONS_PLACEHOLDER' | translate }}"
               size="35"></textarea>
-        </clr-input-container>
+          </clr-textarea-container>
 
 
 
