--- a/src/app/test-management/edit-test-case-modal/edit-test-case-modal.component.html
+++ b/src/app/test-management/edit-test-case-modal/edit-test-case-modal.component.html
@@ -2,50 +2,46 @@
   <h3 class="modal-title">{{ 'TESTCASECREATEPAGE.EDIT_TESTCASE' | translate }}</h3>
   <div class="modal-body">
 
-    <form (ngSubmit)="setOpened(false); updateTestCase(testcase)" id="editTestCaseForm" #editTestCaseForm="ngForm"
+    <form clrForm (ngSubmit)="setOpened(false); updateTestCase(testcase)" id="editTestCaseForm" #editTestCaseForm="ngForm"
       (keyup.enter)="editTestCaseForm.form.valid && editTestCaseForm.ngSubmit.emit();">
       <section class="form-block">
 
-        <div class="form-group">
+        <clr-input-container>
           <label class="required" for="title">{{ 'TESTCASECREATEPAGE.TITLE' | translate }}</label>
-          <input [appAutofocus]="opened" type="text" id="title" name="title" [(ngModel)]="testcase.title" #title="ngModel"
+          <input clrInput [appAutofocus]="opened" type="text" id="title" name="title" [(ngModel)]="testcase.title" #title="ngModel"
             required placeholder="{{ 'TESTCASECREATEPAGE.TITLE_PLACEHOLDER' | translate }}" size="35">
-        </div>
+        </clr-input-container>
 
-        <div class="form-group">
+        <clr-input-container>
           <label for="description">{{ 'TESTCASECREATEPAGE.DESCRIPTION' | translate }}</label>
-          <input type="text" id="description" name="description" [(ngModel)]="testcase.description" #description="ngModel"
+          <input clrInput type="text" id="description" name="description" [(ngModel)]="testcase.description" #description="ngModel"
             placeholder="{{ 'TESTCASECREATEPAGE.DESCRIPTION_PLACEHOLDER' | translate }}" size="35">
-        </div>
+        </clr-input-container>
 
-        <div class="form-group">
+        <clr-select-container>
           <label for="priority">{{ 'TESTCASECREATEPAGE.PRIORITY' | translate }}</label>
-          <div class="select">
-            <select id="priority" name="priority" [(ngModel)]="testcase.priority" #priority="ngModel">
+            <select clrSelect id="priority" name="priority" [(ngModel)]="testcase.priority" #priority="ngModel">
               <option *ngFor="let priority of priorityKeys" [value]="priority.value">{{ 'PRIORITIES.' + priority.value
                 | translate }}</option>
             </select>
-          </div>
-        </div>
+        </clr-select-container>
 
-        <div class="form-group">
+        <clr-select-container>
           <label for="type">{{ 'TESTCASECREATEPAGE.TYPE' | translate }}</label>
-          <div class="select">
-            <select id="type" name="type" [(ngModel)]="testcase.type" #priority="ngModel">
-              <option *ngFor="let type of typeKeys" [value]="type.value">{{ 'TESTCASETYPE.' + type.value | translate }}</option>
-            </select>
-          </div>
-        </div>
+          <select clrSelect id="type" name="type" [(ngModel)]="testcase.type" #priority="ngModel">
+            <option *ngFor="let type of typeKeys" [value]="type.value">{{ 'TESTCASETYPE.' + type.value | translate }}</option>
+          </select>
+        </clr-select-container>
 
-        <div class="form-group">
+        <clr-input-container>
           <label for="tags">{{ 'TESTCASECREATEPAGE.TAGS' | translate }}</label>
-          <input #tag type="text" id="tags" name="tags" (keyup.enter)="setTag(tag.value); tag.value = '';" placeholder="{{ 'TESTCASECREATEPAGE.TAGS_PLACEHOLDER' | translate }}"
+          <input clrInput #tag type="text" id="tags" name="tags" (keyup.enter)="setTag(tag.value); tag.value = '';" placeholder="{{ 'TESTCASECREATEPAGE.TAGS_PLACEHOLDER' | translate }}"
             size="35">
           <button type="button" class="btn btn-sm btn-secondary" (click)="setTag(tag.value); tag.value = '';">
             <clr-icon shape="plus"></clr-icon> Add
           </button>
+        </clr-input-container>
 
-        </div>
         <div class="form-group">
           <label for="tag-list"></label>
           <span *ngFor="let tag of testcase.tags" class="label">{{ tag }}
@@ -55,15 +51,15 @@
           </span>
         </div>
 
-        <div class="form-group">
+        <clr-textarea-container>
           <label for="preconditions">{{ 'TESTCASECREATEPAGE.PRECONDITIONS' | translate }}</label>
-          <textarea id="preconditions" name="preconditions" [(ngModel)]="testcase.preConditions" #preconditions="ngModel"
+          <textarea clrTextarea id="preconditions" name="preconditions" [(ngModel)]="testcase.preConditions" #preconditions="ngModel"
             placeholder="{{ 'TESTCASECREATEPAGE.PRECONDITIONS_PLACEHOLDER' | translate }}" size="35"></textarea>
-        </div>
+        </clr-textarea-container>
 
-        <div class="form-group">
+        <clr-input-container>
           <label>{{ 'TESTCASECREATEPAGE.STEPS' | translate }}</label>
-        </div>
+        </clr-input-container>
         <br>
         <clr-datagrid *ngIf="testcase.steps" [(clrDgSelected)]="selectedTestSteps" [clrDgRowSelection]="false">
 
@@ -86,17 +82,17 @@
           <clr-dg-row *clrDgItems="let step of testcase.steps; let i = index;" [clrDgItem]="step">
 
             <clr-dg-cell>
-              <textarea type="text" id="stepAction" [ngModelOptions]="{standalone: true}" name="stepAction" [(ngModel)]="testcase.steps[i].stepAction"
+              <textarea clrTextarea type="text" id="stepAction" [ngModelOptions]="{standalone: true}" name="stepAction" [(ngModel)]="testcase.steps[i].stepAction"
                 placeholder="{{ 'TESTCASECREATEPAGE.STEPS_ACTION_PLACEHOLDER' | translate }}" size="30"></textarea>
             </clr-dg-cell>
 
             <clr-dg-cell>
-              <textarea type="text" id="testData" [ngModelOptions]="{standalone: true}" name="testData" [(ngModel)]="testcase.steps[i].testData"
+              <textarea clrTextarea type="text" id="testData" [ngModelOptions]="{standalone: true}" name="testData" [(ngModel)]="testcase.steps[i].testData"
                 placeholder="{{ 'TESTCASECREATEPAGE.TESTDATA_PLACEHOLDER' | translate }}" size="30"></textarea>
             </clr-dg-cell>
 
             <clr-dg-cell>
-              <textarea type="text" id="expectedResult" [ngModelOptions]="{standalone: true}" name="expectedResult"
+              <textarea clrTextarea type="text" id="expectedResult" [ngModelOptions]="{standalone: true}" name="expectedResult"
                 [(ngModel)]="testcase.steps[i].expectedResult" placeholder="{{ 'TESTCASECREATEPAGE.EXPECTED_PLACEHOLDER' | translate }}"
                 size="30"></textarea>
             </clr-dg-cell>
@@ -107,11 +103,11 @@
         </clr-datagrid>
 
         <!-- should be removed when drag n drop added -->
-        <div class="form-group">
+        <clr-input-container>
           <label for="order">{{ 'TESTCASECREATEPAGE.ORDER' | translate }}</label>
-          <input type="number" id="order" name="order" [(ngModel)]="testcase.order" #order="ngModel" placeholder="{{ 'TESTCASECREATEPAGE.ORDER_PLACEHOLDER' | translate }}"
+          <input clrInput type="number" id="order" name="order" [(ngModel)]="testcase.order" #order="ngModel" placeholder="{{ 'TESTCASECREATEPAGE.ORDER_PLACEHOLDER' | translate }}"
             size="35">
-        </div>
+        </clr-input-container>
 
       </section>
     </form>
